--- a/fyrirlestur.html
+++ b/fyrirlestur.html
@@ -2,9 +2,18 @@
 <html lang="is">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fyrirlestur</title>
+  <link href="https://fonts.googleapis.com/css?family=Lora|Roboto+Mono&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body class="lecture-page">
-
+  <main>
+    <section class="lecture">
+    </section>
+  </main>
+  <script src="./dist/bundle.js"></script>
 </body>
 </html>
