--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body>
-  <header class="header">
+  <header class="header header--main">
     <h1 class="header__class">Vefforritun</h1>
     <h2 class="header__title">Fyrirlestrar</h2>
-  </header>
-  <main>
     <ul class="filters">
       <li><button class="filters__filter" data-language="html">HTML</button></li>
       <li><button class="filters__filter" data-language="css">CSS</button></li>
       <li><button class="filters__filter" data-language="javascript">JavaScript</button></li>
     </ul>
-    <div class="cards">
-      <div class="cards__row">
+  </header>
+  <main>
+    <div class="list">
+      <div class="list__row">
       </div>
     </div>
   </main>
-  <script src="./dist/bundle.js"></script>
+  <script src="./scr/bundle.js"></script>
 </body>
 </html>
